--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
     <div class="container">
       <header>
-        <h1 class="name">jlord</h1>
+        <h1 class="name">Glzard</h1>
       </header>
       <article>
         <p>I'm a Junior <a href="https://www.cio.com/article/222004/what-is-a-data-engineer.html" target="_blank">Data Engineer</a> and RMIT student living in Saigon, Vietnam. 
