--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
     <footer>
       <ul class="meta inline-list">
-        <li><a href="mailto:to.s3915155@rmit.edu.vn">to.jlord@gmail.com</a></li>
-        <li><a href="#" target="_blank">twitter/jllord</a></li>
-        <li><a href="#" target="_blank">github/jlord</a></li>
+        <li><a href="mailto:to.s3915155@rmit.edu.vn">to.s3915155@rmit.edu.vn</a></li>
+        <li><a href="#" target="_blank">twitter/glizard-rwd</a></li>
+        <li><a href="#" target="_blank">github/Glizard-rwd</a></li>
       </ul>
     </footer>
   </div>
